<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="meehan.matthew.petfindr.viewModel.PetDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="4dp"
            app:cardCornerRadius="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/pet_details_image_card"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/pet_details_text_layout"
                    app:layout_constraintVertical_weight="1"
                    android:elevation="4dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/pet_details_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        remoteImageUrl="@{viewModel.currentPet.photoUrl}"
                        tools:src="@mipmap/ic_launcher">
                    </ImageView>

                </androidx.cardview.widget.CardView>


                <ScrollView
                    android:id="@+id/pet_details_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@id/pet_details_image_card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/pet_name_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textAlignment="center"
                            android:textColor="@color/colorAccent"
                            android:text="@{viewModel.currentPet.name}"
                            tools:text="@string/app_name">
                        </TextView>

                        <TextView
                            android:id="@+id/pet_breed_text_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textAlignment="center"
                            android:textColor="@android:color/black"
                            android:text="@{viewModel.currentPet.breeds}"
                            tools:text="@string/breed">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/black"
                            android:text="@string/physical_characteristics"
                            tools:text="@string/physical_characteristics">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/physical_characteristics"
                            android:text="@{viewModel.currentPet.size}">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/physical_characteristics"
                            android:text="@{viewModel.currentPet.gender}">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/physical_characteristics"
                            android:text="@{viewModel.currentPet.age}">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/black"
                            android:text="@string/health"
                            tools:text="@string/health">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.attributes.shotsCurrent}"
                            tools:text="@string/health">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.attributes.spayedNeutered}"
                            tools:text="@string/health">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.attributes.declawed}"
                            tools:text="@string/health">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/black"
                            android:text="@string/behavioral_characteristics"
                            tools:text="@string/behavioral_characteristics">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.attributes.houseTrained}"
                            tools:text="@string/behavioral_characteristics">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.attributes.specialNeeds}"
                            tools:text="@string/behavioral_characteristics">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.environment.children}"
                            tools:text="@string/behavioral_characteristics">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.environment.dogs}"
                            tools:text="@string/behavioral_characteristics">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.environment.cats}"
                            tools:text="@string/behavioral_characteristics">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="4dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@android:color/black"
                            android:text="@string/contact_info"
                            tools:text="@string/contact_info">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.contact.phone}"
                            tools:text="@string/contact_info">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.contact.email}"
                            tools:text="@string/contact_info">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.currentPet.contact.address}"
                            tools:text="@string/contact_info">
                        </TextView>

                    </LinearLayout>

                </ScrollView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>